xds_envoy/rest_xds/envoy.yaml
node:
  id: mynode
  cluster: mycluster

admin:
  access_log_path: /dev/null
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901

static_resources:
  listeners:
  - name: listener_http
    address:
      socket_address: { address: 0.0.0.0,port_value: 80}
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          stat_prefix: ingress_http
          codec_type: AUTO
          route_config:
            name: test_route
            virtual_hosts:
            - name: web_sevice_1
              domains: ["*"]
              routes:
              - match: {prefix: "/"}
                route: {cluster: webcluster1}
          http_filters:
          - name: envoy.router
  clusters:
  - name: webcluster1
    type: EDS
    lb_policy: ROUND_ROBIN
    connect_timeout: 0.25s
    eds_cluster_config:
      service_name: myservice
      eds_config:
        api_config_source:
          api_type: REST
          cluster_names: [edscluster]
          refresh_delay: 5s
  - name: edscluster
    connect_timeout: 0.25s
    lb_policy: ROUND_ROBIN
    type: STRICT_DNS
    load_assignment:
      cluster_name: edscluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address: {address: edsserver, port_value: 8080}
